--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="smoothlistview_header_last_time">上次更新时间：</string>
     <string name="smoothlistview_footer_hint_normal">查看更多</string>
     <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
+    
+    
+     <string name="moreactivity_listname1">通讯录</string>
+    <string name="moreactivity_listname1desc">通讯录描述</string>
+    
+ <string name="moreactivity_listname2">读取联系人</string>
+    <string name="moreactivity_listname2desc">联系人</string>   
 </resources>
