--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,20 +4,21 @@
     <string name="app_name">stickyheaderlsitview</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
-
-
     <string name="smoothlistview_header_hint_normal">下拉刷新</string>
     <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
     <string name="smoothlistview_header_hint_loading">正在加载...</string>
     <string name="smoothlistview_header_last_time">上次更新时间：</string>
     <string name="smoothlistview_footer_hint_normal">查看更多</string>
     <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
-    
-    
-     <string name="moreactivity_listname1">通讯录</string>
-    <string name="moreactivity_listname1desc">通讯录描述</string>
-    
- <string name="moreactivity_listname2">读取联系人</string>
-    <string name="moreactivity_listname2desc">联系人</string>   
+    <string name="moreactivity_listname1">通讯录</string>
+    <string name="moreactivity_listname1desc">RecyclerView应用、仿微信饿了么</string>
+    <string name="moreactivity_listname2">读取联系人</string>
+    <string name="moreactivity_listname2desc">联系人</string>
+    <string name="moreactivity_listname3">字体变色效果</string>
+    <string name="moreactivity_listname3desc">类似今天头条app侧滑字体变色效果</string>
+    <string name="moreactivity_listname4">仿饿了么搜索栏</string>
+    <string name="moreactivity_listname4desc">y轴动画移动、x轴缩放</string>
+    <string name="moreactivity_listname5">仿微信头像截取</string>
+    <string name="moreactivity_listname5desc">支持缩放平移的imageview</string>
+
 </resources>
