--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="moreactivity_listname5desc">支持缩放平移的imageview</string>
     <string name="moreactivity_listname6">光钥匙控件总结</string>
     <string name="moreactivity_listname6desc">光钥匙控件总结</string>
+    
+        <string name="release_to_cancel">松开手指，取消发送</string>
+     <string name="move_up_to_cancel">手指上滑，取消发送</string>
 </resources>
